gitingnore file noneeded

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,12 @@
 /mylittle-project/bin/Debug/net9.0/mylittle-project.infrastructure.dll
 /mylittle-project/bin/Debug/net9.0/mylittle-project.infrastructure.pdb
 /mylittle-project/bin/Debug/net9.0/mylittle-project.pdb
+/.vs/mylittle-project/FileContentIndex/356431c8-1bfa-4cd5-a9fe-d7373e796c73.vsidx
+/.vs/mylittle-project/FileContentIndex/64f94fbb-7460-4c1a-a6d3-f4f74c6e35da.vsidx
+/.vs/mylittle-project/FileContentIndex/699019d4-5723-479a-b72a-767dc8e467d9.vsidx
+/.vs/mylittle-project/FileContentIndex/d3b93afa-1830-4037-8f1b-92e85577c238.vsidx
+/.gitignore
+/.gitignore
+/.gitignore
+/.gitignore
+/.gitignore
