--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,16 @@
 /.vs/mylittle-project/FileContentIndex/ec5fcf63-5ab3-4c69-97bd-cb16f1b50ab0.vsidx
 /.vs/mylittle-project/FileContentIndex/ed824172-1518-477d-8074-c9671911f493.vsidx
 /.vs/mylittle-project/FileContentIndex/f785534e-26e4-4519-9da8-af208d8f4a5a.vsidx
+/.vs/mylittle-project/FileContentIndex/0efe5353-4184-4813-91a5-369c04e56c22.vsidx
+/.vs/mylittle-project/FileContentIndex/80d1c00c-728a-4177-849a-90ee1fc0cb72.vsidx
+/.vs/mylittle-project/FileContentIndex/c0d26cd3-5c6d-4604-b647-59bb897a635f.vsidx
+/.vs/mylittle-project/FileContentIndex/c47a86f8-35c7-46df-8831-4e6cd44c7a5f.vsidx
+/.vs/mylittle-project/FileContentIndex/db381ad4-358a-424e-97bc-dbb50050dab2.vsidx
+/mylittle-project/mylittle-project.csproj
+/mylittle-project/UploadedKycDocs/46f3dd68-a95c-4361-2d80-08ddb7a45048/.jpg_ce2034b6-91e6-47e9-b39a-8ed7e07888dd.jpg
+/mylittle-project.infrastructure/mylittle-project.infrastructure.csproj
+/mylittle-project.Application/mylittle-project.Application.csproj
+/mylittle-project.Domain/mylittle-project.Domain.csproj
+/.gitignore
+/.gitignore
+/.gitignore
