--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,25 @@
 /mylittle-project.Application/DTOs/CategoryFilterDto.cs
 /mylittle-project.Application/obj/Debug/net9.0/ref/mylittle-project.Application.dll
 *.vsidx
+/mylittle-project/bin/Debug/net9.0/LinqKit.Core.dll
+/mylittle-project/bin/Debug/net9.0/LinqKit.Microsoft.EntityFrameworkCore.dll
+/mylittle-project/bin/Debug/net9.0/mylittle-project.deps.json
+/mylittle-project/obj/Debug/net9.0/mylittle-project.AssemblyInfo.cs
+/mylittle-project/Program.cs
+/mylittle-project.Application/Interfaces/IBaseFilterService.cs
+/mylittle-project.Application/Interfaces/Repositories/IUnitOfWork.cs
+/mylittle-project.Domain/obj/Debug/net9.0/mylittle-project.Domain.AssemblyInfo.cs
+/mylittle-project.Application/obj/Debug/net9.0/mylittle-project.Application.AssemblyInfo.cs
+/mylittle-project.infrastructure/Data/AppDbContext.cs
+/mylittle-project.infrastructure/Data/AppDbContextFactory.cs
+/mylittle-project.infrastructure/bin/Debug/net9.0/mylittle-project.infrastructure.deps.json
+/mylittle-project.infrastructure/Migrations/20250627111620_m2.cs
+/mylittle-project.infrastructure/Migrations/20250627111620_m2.Designer.cs
+/mylittle-project.infrastructure/Migrations/20250630070936_hello5.cs
+/mylittle-project.infrastructure/Migrations/20250630070936_hello5.Designer.cs
+/mylittle-project.infrastructure/Migrations/AppDbContextModelSnapshot.cs
+/mylittle-project.infrastructure/obj/Debug/net9.0/mylittle-project.infrastructure.AssemblyInfo.cs
+/mylittle-project.infrastructure/Repositories/UnitOfWork.cs
+/mylittle-project.infrastructure/Services/BaseFilterService.cs
+/mylittle-project.infrastructure/mylittle-project.infrastructure.csproj
+/mylittle-project/bin/Debug/net9.0/mylittle-project.deps.json
