buyers without unit of work , but with AuditbleEntity

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,7 @@
 /mylittle-project.Application/obj/Debug/net9.0/mylittle-project.Application.AssemblyInfo.cs
 /mylittle-project.Domain/obj/Debug/net9.0/mylittle-project.Domain.AssemblyInfo.cs
 /mylittle-project.infrastructure/obj/Debug/net9.0/mylittle-project.infrastructure.AssemblyInfo.cs
+/mylittle-project.Domain/bin/Debug/net9.0/mylittle-project.Domain.deps.json
+/.gitignore
+/mylittle-project.Application/bin/Debug/net9.0/mylittle-project.Application.deps.json
+/mylittle_project.zip
